update register route
