# webds_api/route/route_register.py
@@ -6,14 +6,26 @@ import json
 from .. import webds
 from ..utils import SystemHandler
 from ..touchcomm.touchcomm_manager import TouchcommManager
+import threading
+from multiprocessing import Queue
 import sys
 import time
 
 
 REGISTER_FOLDER = '/home/dsdkuser/jupyter/workspace/'
-
+g_thread = None
+g_queue = None
+g_terminate = False
 
 class RegisterHandler(APIHandler):
+
+    def resetQueue():
+        global g_queue
+        if g_queue is None:
+            g_queue = Queue()
+        else:
+            while not g_queue.empty():
+                g_queue.get()
 
     def read_register_file(src):
         try:
@@ -42,42 +54,124 @@ class RegisterHandler(APIHandler):
         return values
 
     def check_mode():
-        tc = TouchcommManager().getInstance()
-        id = tc.identify()
+        try:
+            tc = TouchcommManager().getInstance()
+            id = tc.identify()
 
-        if id['mode'] == 'rombootloader':
-            print("In RomBoot Mode")
-        elif id['mode'] == 'application':
-            print("In Application Mode")
-            ###tc.unlockPrivate()
+            if id['mode'] == 'rombootloader':
+                print("In RomBoot Mode")
+            elif id['mode'] == 'application':
+                print("In Application Mode")
+                ###tc.unlockPrivate()
 
-            try:
                 print("Force jump to RomBoot Mode")
                 tc.enterRomBootloaderMode()
-
                 id = tc.identify()
                 print(id['mode'])
-            except Exception as e:
-                print(e)
-        else:
-            print(id['mode'])
+                print("Jump to RomBoot Mode done")
+            else:
+                print(id['mode'])
+
+        except Exception as e:
+            message=str(e)
+            raise tornado.web.HTTPError(status_code=400, log_message=message)
 
     @tornado.web.authenticated
     def get(self):
-        print(self.request)
+        return self.getSSE()
 
-        self.finish(json.dumps({
-            "data": "register get is running"
-        }))
+    def sse_command(self, command, data):
+        print("sse command", command, data)
+        global g_queue
+        global g_terminate
+        tc = TouchcommManager().getInstance()
+        for idx, r in enumerate(data):
+            if g_terminate:
+                print("detect terminate flag")
+                break
+            try:
+                if command == "read":
+                    v = tc.readRegister(r)
+                    g_queue.put({"status": "run", "address": r, "value": v, "index": idx, "total": len(data)})
+                elif command == "write":
+                    v = tc.writeRegister(r["address"], r["value"])
+                    g_queue.put({"status": "run", "address": r["address"], "value": r["value"], "index": idx, "total": len(data)})
+            except Exception as e:
+                print(e, r)
+                if command == "read":
+                    g_queue.put({"status": "run", "address": r, "value": None, "index": idx, "total": len(data)})
+                else:
+                    g_queue.put({"status": "run", "address": r["address"], "value": None, "index": idx, "total": len(data)})
+                pass
+
+        if g_terminate:
+            g_queue.put({"status": "terminate"})
+        else:
+            g_queue.put({"status": "done"})
+        print("thread will be terminated")
+
+    @tornado.web.authenticated
+    @tornado.gen.coroutine
+    def publish(self, name, data):
+        """Pushes data to a listener."""
+        try:
+            self.set_header('content-type', 'text/event-stream')
+            self.write('event: {}\n'.format(name))
+            self.write('data: {}\n'.format(data))
+            self.write('\n')
+            yield self.flush()
+
+        except StreamClosedError:
+            print("stream close error!!")
+            raise
+
+    @tornado.web.authenticated
+    @tornado.gen.coroutine
+    def getSSE(self):
+        print("SSE LOOP")
+        name="Register"
+        global g_queue
+        try:
+            while True:
+                if g_queue is None:
+                    yield tornado.gen.sleep(0.1)
+                    continue
+
+                token = g_queue.get()
+                if token is not None:
+                    yield self.publish(name, json.dumps(token))
+
+                if token['status'] == 'done' or token['status'] == 'terminate':
+                    print("terminate token", token)
+                    break
+                yield tornado.gen.sleep(0.1)
+
+        except StreamClosedError:
+            print("Stream Closed!")
+            pass
+
+        except Exception as e:
+            ### TypeError
+            ### BrokenPipeError
+            print("Oops! get report", e.__class__, "occurred.")
+            print(e)
+            message=str(e)
+            raise tornado.web.HTTPError(status_code=400, log_message=message)
+
+        finally:
+            print("terminate")
 
     @tornado.web.authenticated
     def post(self):
         data = self.get_json_body()
         print(data)
         response = {}
+        global g_terminate
+        global g_thread
 
         if "command" in data:
             command = data["command"]
+
             print(command)
             if command == "init":
                 ### mode check
@@ -87,6 +181,29 @@ class RegisterHandler(APIHandler):
                 fname = os.path.join(REGISTER_FOLDER, 'regs_sb7900_riscv.json')
                 content = RegisterHandler.read_register_file(fname)
                 self.finish(json.dumps(content))
+                return
+
+            elif command == "terminate":
+                print("terminate")
+                g_terminate = True
+                g_thread.join()
+                self.finish(json.dumps({"status": "terminate"}))
+                return
+
+            if "sse" in data:
+                sse = data["sse"]
+            else:
+                sse = False
+
+            if sse:
+                RegisterHandler.resetQueue()
+                g_terminate = False
+                g_thread = threading.Thread(target=self.sse_command, args=(command, data["data"]))
+                g_thread.start()
+
+                self.finish(json.dumps({
+                  "status": "start",
+                }))
                 return
 
             elif command == "read":
@@ -113,13 +230,10 @@ class RegisterHandler(APIHandler):
                     except Exception as e:
                         status.append({"address": hex(r["address"]), "error": str(e) })
                         pass
-                    alist.append(r["address"])
-
-                print("STATUS:", status)
-                value = RegisterHandler.read_registers(tc, alist)
+                    alist.append(r["value"])
 
                 self.finish(json.dumps({
-                  "data": value,
+                  "data": alist,
                   "status": status
                 }))
                 return
